package net.proselyte.basepatterns.creational.factory;

public class Program {
    public static void main(String[] args) {

    }

}
