package net.proselyte.basepatterns.structural.bridge;

public class BankSystem {

    protected BankSystem(Developer developer) {
    }

}
