package net.proselyte.basepatterns.structural.bridge;

public class CppDeveloper {
}
