package net.proselyte.basepatterns.structural.bridge;

public class ProgramCreator {
    public static void main(String[] args) {

    }
}
