package net.proselyte.basepatterns.structural.bridge;

public class StockExchange {

    protected StockExchange(Developer developer) {
    }

}
